# website

./: .env.example  .gitignore  CLAUDE.md  README.md
apps/chief-of-staff/: .env.example  README.md  pyproject.toml
apps/chief-of-staff/chief/: __init__.py  bot.py  config.py  learnings.md  orchestrator.py  system_prompt.md
apps/chief-of-staff/chief/scripts/: run_bot.py
apps/human-design/: index.html
apps/website/: .gitignore  DEPLOY.md  drizzle.config.ts  next.config.ts  package.json  vercel.json
apps/website/scripts/: migrate-if-configured.mjs
apps/website/src/: proxy.ts
apps/website/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts
apps/website/src/app/(public)/: layout.tsx  loading.tsx  page.tsx  sitemap.ts
apps/website/src/db/: migrate-background-to-skills.ts  promote-admin.ts  schema.ts  seed.ts
apps/website/src/lib/: access.ts  admin-stats.ts  admin.ts  affiliate.ts  auth-client.ts  auth.ts  creator.ts  db.ts  favorites.ts  lazy-autoplay.ts  newsletter.ts  r2.ts  rate-limit.ts  resend.ts  site-settings.ts  slack.ts  stripe.ts  submissions.ts  use-glass-trigger.ts  utils.ts
docs/: architecture.md  conventions.md  secrets-checklist.md
docs/superpowers/specs/: 2026-06-06-media-compression-design.md  2026-06-06-subcategories-design.md
hermes-home/: .env.example  README.md  SOUL.md  config.yaml
hermes-home/memories/: MEMORY.md  USER.md
infra/launchagents/: com.humanbetween.chief.plist.template  com.humanbetween.hermes-agent.plist.template
infra/scripts/: bootstrap.sh  export.sh  install-launchd.sh
(+147 files in other folders)
